--- a/index.html
+++ b/index.html
@@ -417,7 +417,187 @@
         </section>
 
         <!-- Portfolio -->
-        <section class="portfolio"></section>
+        <section class="portfolio">
+            <div class="container">
+                <div class="title">
+                    <p class="sub-title">Portfolio</p>
+                    <h2 class="content-title">Our Latest Work</h2>
+                </div>
+
+                <div class="portfolio-content">
+                    <!-- item1 -->
+                    <div
+                        class="portfolio__item wow animate__animated animate__fadeInUp"
+                    >
+                        <img
+                            src="./imgs/pic1_2.jpg"
+                            alt=""
+                            class="portfolio__img"
+                        />
+                        <div class="portfolio__overlay">
+                            <div class="portfolio__icon">
+                                <a
+                                    href="./imgs/pic1_2.jpg"
+                                    class="portfolio__link"
+                                >
+                                    <i class="fa-solid fa-plus"></i>
+                                </a>
+                            </div>
+                            <div class="portfolio__text">
+                                <h3 class="portfolio__title">
+                                    Software Landing
+                                </h3>
+                                <p class="portfolio__desc">By Jhone Doe</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- item2 -->
+                    <div
+                        class="portfolio__item wow animate__animated animate__fadeInUp"
+                    >
+                        <img
+                            src="./imgs/pic2_1.jpg"
+                            alt=""
+                            class="portfolio__img"
+                        />
+                        <div class="portfolio__overlay">
+                            <div class="portfolio__icon">
+                                <a
+                                    href="./imgs/pic2_1.jpg"
+                                    class="portfolio__link"
+                                >
+                                    <i class="fa-solid fa-plus"></i>
+                                </a>
+                            </div>
+                            <div class="portfolio__text">
+                                <h3 class="portfolio__title">
+                                    Software Landing
+                                </h3>
+                                <p class="portfolio__desc">By Jhone Doe</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- item3 -->
+                    <div
+                        class="portfolio__item wow animate__animated animate__fadeInUp"
+                        data-wow-duration="1s"
+                        data-wow-delay="1s"
+                    >
+                        <img
+                            src="./imgs/pic3_1.jpg"
+                            alt=""
+                            class="portfolio__img"
+                        />
+                        <div class="portfolio__overlay">
+                            <div class="portfolio__icon">
+                                <a
+                                    href="./imgs/pic3_1.jpg"
+                                    class="portfolio__link"
+                                >
+                                    <i class="fa-solid fa-plus"></i>
+                                </a>
+                            </div>
+                            <div class="portfolio__text">
+                                <h3 class="portfolio__title">
+                                    Software Landing
+                                </h3>
+                                <p class="portfolio__desc">By Jhone Doe</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- item4 -->
+                    <div
+                        class="portfolio__item wow animate__animated animate__fadeInUp"
+                        data-wow-duration="1s"
+                        data-wow-delay="1s"
+                    >
+                        <img
+                            src="./imgs/pic4.jpg"
+                            alt=""
+                            class="portfolio__img"
+                        />
+                        <div class="portfolio__overlay">
+                            <div class="portfolio__icon">
+                                <a
+                                    href="./imgs/pic4.jpg"
+                                    class="portfolio__link"
+                                >
+                                    <i class="fa-solid fa-plus"></i>
+                                </a>
+                            </div>
+                            <div class="portfolio__text">
+                                <h3 class="portfolio__title">
+                                    Software Landing
+                                </h3>
+                                <p class="portfolio__desc">By Jhone Doe</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- item5 -->
+                    <div
+                        class="portfolio__item wow animate__animated animate__fadeInUp"
+                        data-wow-duration="1s"
+                        data-wow-delay="3s"
+                    >
+                        <img
+                            src="./imgs/pic5.jpg"
+                            alt=""
+                            class="portfolio__img"
+                        />
+                        <div class="portfolio__overlay">
+                            <div class="portfolio__icon">
+                                <a
+                                    href="./imgs/pic5.jpg"
+                                    class="portfolio__link"
+                                >
+                                    <i class="fa-solid fa-plus"></i>
+                                </a>
+                            </div>
+                            <div class="portfolio__text">
+                                <h3 class="portfolio__title">
+                                    Software Landing
+                                </h3>
+                                <p class="portfolio__desc">By Jhone Doe</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- item6  -->
+
+                    <div
+                        class="portfolio__item wow animate__animated animate__fadeInUp"
+                        data-wow-duration="1s"
+                        data-wow-delay="2s"
+                    >
+                        <img
+                            src="./imgs/pic6.jpg"
+                            alt=""
+                            class="portfolio__img"
+                        />
+                        <div class="portfolio__overlay">
+                            <div class="portfolio__icon">
+                                <a
+                                    href="./imgs/pic6.jpg"
+                                    class="portfolio__link"
+                                >
+                                    <i class="fa-solid fa-plus"></i>
+                                </a>
+                            </div>
+                            <div class="portfolio__text">
+                                <h3 class="portfolio__title">
+                                    Software Landing
+                                </h3>
+                                <p class="portfolio__desc">By Jhone Doe</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Blogs -->
         <section class="blogs">
@@ -526,7 +706,9 @@
         <!-- Footer -->
         <footer class="footer">
             <div class="container">
-                <div class="footer__top">
+                <div
+                    class="footer__top wow animate__animated animate__fadeInUp"
+                >
                     <div class="footer__text">
                         <h2 class="footer__title--content">
                             Subscribe To Our Newsletter
@@ -546,7 +728,9 @@
                         </form>
                     </div>
                 </div>
-                <div class="footer__bottom">
+                <div
+                    class="footer__bottom wow animate__animated animate__fadeIn animate__delay-1s"
+                >
                     <div class="footer__item">
                         <a href="#!" class="footer__link">
                             <img
