Fancybox carousel img

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             referrerpolicy="no-referrer"
         />
 
+        <!-- fancybox -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
+            integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+
         <!-- fontawesome -->
         <link
             rel="stylesheet"
@@ -439,6 +448,10 @@
                                 <a
                                     href="./imgs/pic1_2.jpg"
                                     class="portfolio__link"
+                                    data-fancybox="gallery"
+                                    data-src="./imgs/pic1_2.jpg"
+                                    data-caption="image 1"
+                                    data-thumb="./imgs/pic1_2.jpg"
                                 >
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -466,6 +479,10 @@
                                 <a
                                     href="./imgs/pic2_1.jpg"
                                     class="portfolio__link"
+                                    data-fancybox="gallery"
+                                    data-src="./imgs/pic2_1.jpg"
+                                    data-caption="image 2"
+                                    data-thumb="./imgs/pic2_1.jpg"
                                 >
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -495,6 +512,10 @@
                                 <a
                                     href="./imgs/pic3_1.jpg"
                                     class="portfolio__link"
+                                    data-fancybox="gallery"
+                                    data-src="./imgs/pic3_1.jpg"
+                                    data-caption="image 3"
+                                    data-thumb="./imgs/pic3_1.jpg"
                                 >
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -524,6 +545,10 @@
                                 <a
                                     href="./imgs/pic4.jpg"
                                     class="portfolio__link"
+                                    data-fancybox="gallery"
+                                    data-src="./imgs/pic4.jpg"
+                                    data-caption="image 4"
+                                    data-thumb="./imgs/pic4.jpg"
                                 >
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -541,7 +566,7 @@
                     <div
                         class="portfolio__item wow animate__animated animate__fadeInUp"
                         data-wow-duration="1s"
-                        data-wow-delay="3s"
+                        data-wow-delay="2s"
                     >
                         <img
                             src="./imgs/pic5.jpg"
@@ -553,6 +578,10 @@
                                 <a
                                     href="./imgs/pic5.jpg"
                                     class="portfolio__link"
+                                    data-fancybox="gallery"
+                                    data-src="./imgs/pic5.jpg"
+                                    data-caption="image 5"
+                                    data-thumb="./imgs/pic5.jpg"
                                 >
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -583,6 +612,10 @@
                                 <a
                                     href="./imgs/pic6.jpg"
                                     class="portfolio__link"
+                                    data-fancybox="gallery"
+                                    data-src="./imgs/pic6.jpg"
+                                    data-caption="image 6"
+                                    data-thumb="./imgs/pic6.jpg"
                                 >
                                     <i class="fa-solid fa-plus"></i>
                                 </a>
@@ -930,6 +963,14 @@
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
             integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        ></script>
+
+        <!-- !fancybox -->
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"
+            integrity="sha512-uURl+ZXMBrF4AwGaWmEetzrd+J5/8NRkWAvJx5sbPSSuOb0bZLqf+tOzniObO00BjHa/dD7gub9oCGMLPQHtQA=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
