fix bug btn,   complete Project Samar

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                 </li>
                             </ul>
                             <button
-                                class="btn animate__animated animate__fadeInUp animate__delay-4s"
+                                class="btn btn-start animate__animated animate__fadeInUp animate__delay-4s"
                             >
                                 GET STARTED
                             </button>
